# LastProjectBack

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: generation.py  layers.py  planned_objects.py  restriction_zones.py  rules.py  sites.py  uploads.py
app/core/: config.py  errors.py  logging.py
app/db/: session.py
app/models/: __init__.py  analysis_layer.py  enums.py  existing_feature.py  generation_run.py  mixins.py  plan_solution.py  planned_object.py  restriction_zone.py  rule.py  site.py  site_boundary.py  terrain_model.py  upload.py
app/schemas/: common.py  generation.py  layers.py  planned_objects.py  restriction_zones.py  rules.py  sites.py  uploads.py
app/services/: analysis.py  boundaries.py  generation.py  geojson.py  layers.py  planned_objects.py  restriction_zones.py  rules.py  sites.py  uploads.py
tests/: conftest.py  test_api_flow.py  test_geojson.py
